# rustdoku

./: .gitignore  Cargo.toml  Trunk.toml  sudoku17
.cargo/: config
cli/: Cargo.toml
cli/src/: main.rs
game/: Cargo.toml  index.css  index.html  index.sass
game/src/: main.rs
scripts/: postprocess.sh
src/: lib.rs  main.rs
src/cli/: Cargo.toml
src/cli/src/: main.rs
src/game/: Cargo.toml  index.html
src/game/src/: main.rs
src/sudoku/: Cargo.toml  candidates.rs  cell.rs  fast_grid.rs  fast_solver.rs  generator.rs  grid.rs  mod.rs  solver.rs
src/sudoku/src/: generator.rs  grid.rs  lib.rs
sudoku/: Cargo.toml
sudoku/src/: candidates.rs  generator.rs  grid.rs  lib.rs  solver.rs
