[package]
name = "rustdoku"
version = "0.1.0"
description = "Solves and generates sudokus"
authors = ["Ville Orkas <ville@orkas.fi>"]
edition = "2018"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = true

[dependencies]
itertools = "*"
rayon = "*"
thiserror = "*"
clap = "*"
rand = "*"
lazy_static = "*"
ahash = "*"