[package]
name = "rustdoku-cli"
version = "0.1.0"
description = "Command line interface for rustdoku"
authors = ["Ville Orkas <ville@orkas.fi>"]
edition = "2021"

[dependencies]
clap = { version = "*", features = ["cargo"] }
rayon = "*"
rustdoku-sudoku = { path = "../sudoku" }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
mimalloc = { version = "*", default-features = false }