[package]
name = "rustdoku-game"
version = "0.1.0"
description = "Sudoku game built with Sycamore"
authors = ["Ville Orkas <ville@orkas.fi>"]
edition = "2021"

[dependencies]
rustdoku-sudoku = { path = "../sudoku" }
sycamore = "*"
getrandom = { version = "*", features = ["js"] }
wasm-bindgen = "*"
gloo-dialogs = "*"

[dependencies.web-sys]
version = "*"
features = [
    "Navigator",
    "Clipboard",
    "KeyboardEvent"
]